# perception-mcp

./: .gitignore  .gitmodules  README.md  mcp_agent.config.yaml  mcp_agent.secrets_template.yaml  pyproject.toml
perception_mcp/: __init__.py  __main__.py  analysis.py
tests/: test_server.py
