[project]
name = "perception-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.61.0",
    "fastmcp>=2.11.2",
    "httplib2>=0.22.0",
    "mcp-agent>=0.1.8",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
